--- a/pages/alafrancaise.html
+++ b/pages/alafrancaise.html
@@ -37,7 +37,7 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="agency-restaurant">
       <header class="header">
         <div class="header__btn">
           <a class="link" href="../index.html">
