--- a/pages/lanoteenchantee.html
+++ b/pages/lanoteenchantee.html
@@ -36,7 +36,8 @@
     <title>Ohmyfood! - La note enchantée</title>
   </head>
   <body>
-    <div class="wrapper">
+    <!--ajout d'une classe pour centrer pages restaurants-->
+    <div class="agency-restaurant">
       <!--Header-->
       <header class="header">
         <div class="header__btn">
