--- a/pages/lapalettedugout.html
+++ b/pages/lapalettedugout.html
@@ -17,7 +17,7 @@
     <title>Ohmyfood! - La palette du goût</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="agency-restaurant">
       <header class="header">
         <div class="header__btn">
           <a class="link" href="../index.html">
