--- a/pages/ledelicedessens.html
+++ b/pages/ledelicedessens.html
@@ -31,7 +31,7 @@
     <title>Ohmyfood! - Le délice des sens</title>
   </head>
   <body>
-    <div class="wrapper">
+    <div class="agency-restaurant">
       <header class="header">
         <div class="header__btn">
           <a class="link" href="../index.html">
